# mactest

./: .gitignore  1.DIFF  Brewfile  CMakeLists.txt  d__ependencies.txt  dependencies-minimal.txt
.github/workflows/: build.yml
app/: CMakeLists.txt  app.cpp
far/: CMakeLists.txt  far.cpp  find_files.cpp  find_files.hpp
far/far2sdk/: farplug-wide.h
include/: header.hpp
lib/: CMakeLists.txt  lib.cpp
luafar/: CMakeLists.txt  lf_luafar.cpp  lf_luafar.h  lf_service.cpp  luafar.cpp  luaplug.c
luafar/src/: lf_bit64.c  lf_bit64.h  lf_exported.cpp  lf_luafar.h  lf_service.cpp  lf_unidata.h  lf_utf8lib.c  luaplug.c
mylib/: CMakeLists.txt
myplug/: CMakeLists.txt  myplug.cpp
myplug/src/: myplug.lua
plug/: CMakeLists.txt  plug.cpp
winport/: CMakeLists.txt  winport.cpp
